CB-03 Controller de partida e novos params no factory
